--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
